[project]
name = "steam-friend-relationship-map"
version = "0.1.0"
description = "Local Steam friend relationship graph crawler and Neo4j visualizer"
readme = "README.md"
authors = [
    { name = "LYKK231", email = "user@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "neo4j>=6.2.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
steam-friend-map = "steam_friend_relationship_map.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
